--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 alpha6.4:
 1. Updated CyanogenMod sources from github to recent version
 2. Applied volume control patch [vflashbirdv/DE-NISkA]
+3. Google apps update: 20101008
 
 alpha6.3: 20101011.095301
 1. Updated CyanogenMod sources from github to recent version
