--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ alpha6.5:
 1. Updated CyanogenMod sources from github to recent version
 2. Add baudrate to speedup BT
 3. Corrected directions for accel, pitch, roll (DE-NISkA)
+4. Some script fixes: remount, 98bthack
 
 alpha6.4: 20101015.125310
 1. Updated CyanogenMod sources from github to recent version
