--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+alpha7:
+1. Updated CyanogenMod sources to 6.1.0-RC1
+
 alpha6.5:
 1. Updated CyanogenMod sources from github to recent version
 2. Added more sound routes to BT headsets [DE-NISkA]
