Video recording [vflashbirdv]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 alpha7:
 1. Updated CyanogenMod sources to 6.1.0-RC1
+2. Added video recording [vflashbirdv]
 
 alpha6.5:
 1. Updated CyanogenMod sources from github to recent version
