--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 alpha7:
 1. Updated CyanogenMod sources to 6.1.0-RC1
-2. Added video recording [vflashbirdv]
+2. Applied video recording patch for camcoder [vflashbirdv]
+3. Applied audio recording patch for compressed audio format [vflashbirdv]
 
 alpha6.5:
 1. Updated CyanogenMod sources from github to recent version
