--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,11 @@
 alpha7.1:
-1. Updated CyanogenMod sources to
+1. Updated CyanogenMod sources from github
 2. Added multitouch driver 2.4 [Gabriel-LG]
 3. Update Xmister's recovery
 4. Possible market error -18 [hotchili]
 5. Sensor fixes [cadavre]
+6. A/V lagfix [qbanin]
+7. Improved vibrator driver [Gabriel-LG]
 
 alpha7:
 1. Updated CyanogenMod sources to 6.1.0-RC1
