--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,7 @@ alpha7.1:
 3. Update Xmister's recovery
 4. Possible market error -18 [hotchili]
 5. Sensor fixes [cadavre]
-6. A/V lagfix [qbanin]
+6. Possible Camera fix
 7. Improved vibrator driver [Gabriel-LG]
 
 alpha7:
