--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ alpha7.1:
 5. Sensor fixes [cadavre]
 6. Possible Camera fix
 7. Improved vibrator driver [Gabriel-LG]
+8. video record color issue & voicedialer fix [vflashbird]
 
 alpha7:
 1. Updated CyanogenMod sources to 6.1.0-RC1
