--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,7 +6,7 @@ alpha7.1:
 5. Sensor fixes [cadavre]
 6. Possible Camera fix
 7. Improved vibrator driver [Gabriel-LG]
-8. video record color issue & voicedialer fix [vflashbird]
+8. video record color issue, voicedialer, audiorecord fix [vflashbird]
 9. Google apps update: 20101020
 
 alpha7:
