--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,10 +6,10 @@ alpha7.1:
 5. Sensor fixes [cadavre]
 6. Possible Camera fix
 7. Improved vibrator driver [Gabriel-LG]
-8. video record color issue, voicedialer, audiorecord fix [vflashbird]
+8. video record color issue, voicedialer fix [vflashbird]
 9. Google apps update: 20101020
 
-alpha7:
+alpha7: 20101028.083843
 1. Updated CyanogenMod sources to 6.1.0-RC1
 2. Applied video recording patch for camcoder [vflashbirdv]
 3. Applied audio recording patch for compressed audio format [vflashbirdv]
