--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+alpha7.2:
+1. Ultimate Spica Recovery [Xmister]
+2. Compcache support [hotchili]
+
 alpha7.1:
 1. Updated CyanogenMod sources from github
 2. Added multitouch driver 2.4 [Gabriel-LG]
