--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+alpha7.3:
+1. Applied vflashbirdv's sound record and camcoder fix
+2. using 100% CM wifi implementation (thanks to funman)
+
 alpha7.2:
 1. Ultimate Spica Recovery [Xmister]
 2. Compcache support [hotchili]
