--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,10 @@
 alpha7.3:
-1. Applied vflashbirdv's sound record and camcoder fix
-2. using 100% CM wifi implementation (thanks to funman)
-3. Updated Ultimate Spica Recovery
-4. Updated CyanogenMod sources from github
+1. Updated CyanogenMod sources from github
+2. armv6-vfp optimisation
+3. Applied vflashbirdv's sound record and camcoder fix
+4. Using 100% CM wifi implementation (thanks to funman)
+5. Updated Ultimate Spica Recovery
+6. Sensor updates [cadavre]
 
 alpha7.2: 20101108.091305
 1. Ultimate Spica Recovery [Xmister]
