--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 alpha7.5:
 1. Updated CyanogenMod sources from github
-2. Small fixes: airplane, network searching
+2. Small fixes: airplane, network searching, call waiting problem
 
 alpha7.4: 20101128.130826
 1. Updated CyanogenMod sources from github
