--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,7 +13,7 @@
 + GPS [criminal]
 + Sensors [DE-NISkA/Leshak/cadavre]
 + Camera [vflashbirdv/criminal]
-+ Hardware accelerated movie playing (mp4/h264)
++ Hardware accelerated movie playing (mp4/h264) [vflashbirdv]
 - Hardware accelerated movie playing (DivX)
 
 alpha8:
