--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,6 +16,10 @@
 + Hardware accelerated movie playing (mp4/h264) [vflashbirdv]
 - Hardware accelerated movie playing (DivX)
 
+alpha8.1:
+1. Airplane mode vs Google Services fix [cujo]
+2. Lock button fix [adi4motion]
+
 alpha8:
 1. Updated CyanogenMod sources from github
 2. Hardware accelerated movie playing (mp4/h264) [big thanks goes to: vflashbirdv]
