--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,6 +12,9 @@
  CHANGELOG
 ===========
 
+alpha2.3:
+  Updated CM source from github (RC4.1)
+
 alpha2.2:
   Updated CM source from github (2.3.3)
 
